@@ -1,3 +1,7 @@
+2008-09-08	Jannis Pohlmann <jannis@xfce.org>
+
+	* *.po, xfce4-settings.pot: Merge strings.
+
 2008-09-08  Jari Rahkonen <jari.rahkonen@pp1.inet.fi>
 
 	* fi.po: Update Finnish translation
