@@ -1,3 +1,10 @@
+2008-09-08	jannis
+
+	* dialogs/keyboard-settings/frap-shortcuts.c, 
+	  dialogs/keyboard-settings/frap-shortcuts-dialog.c,
+		xfce4-settings-helper/frap-shortcuts.c: Sync with latest
+		changes made to libfrap (locally by now) and clean things up a little.
+
 2008-09-07	jannis
 
 	* dialogs/keyboard-settings/frap-shortcuts-dialogs.c: Remove an unused
